# manipulation_playground

./: CMakeLists.txt  LICENSE  README.md  package.xml
manipulation_playground_articulated_devices/: CMakeLists.txt  README.md  package.xml
manipulation_playground_articulated_devices/devices/DN40_globe_valve/controllers/: DN40_globe_valve_controllers.yaml
manipulation_playground_articulated_devices/devices/DN40_globe_valve/launch/: spawn_DN40_globe_valve.launch
manipulation_playground_articulated_devices/devices/DN40_globe_valve/model/: DN40_globe_valve.gazebo  DN40_globe_valve.urdf.xacro
manipulation_playground_articulated_devices/devices/HNF361_safety_switch/controllers/: HNF361_safety_switch_controllers.yaml
manipulation_playground_articulated_devices/devices/HNF361_safety_switch/launch/: HNF361_safety_switch_spawn.launch  spawn_HNF361_safety_switch.launch
manipulation_playground_articulated_devices/devices/HNF361_safety_switch/model/: HNF361_safety_switch.gazebo  HNF361_safety_switch.urdf.xacro  HNF361_safety_switch_base.dae  HNF361_safety_switch_lever.dae
manipulation_playground_articulated_devices/devices/HNF361_safety_switch/scripts/: HNF361_safety_switch_actuation_node.py
manipulation_playground_articulated_devices/devices/PN16_gate_valve/controllers/: PN16_gate_valve_controllers.yaml
manipulation_playground_articulated_devices/devices/PN16_gate_valve/launch/: PN16_gate_valve_spawn.launch  spawn_PN16_gate_valve.launch
manipulation_playground_articulated_devices/devices/PN16_gate_valve/model/: PN16_gate_valve.gazebo  PN16_gate_valve.urdf.xacro
manipulation_playground_articulated_devices/devices/VDL_6_20_110_ball_valve/controllers/: VDL_6_20_110_ball_valve_controllers.yaml
manipulation_playground_articulated_devices/devices/VDL_6_20_110_ball_valve/launch/: spawn_VDL_6_20_110_ball_valve.launch
manipulation_playground_articulated_devices/devices/VDL_6_20_110_ball_valve/model/: VDL_6_20_110_ball_valve.gazebo  VDL_6_20_110_ball_valve.urdf.xacro  VDL_6_20_110_ball_valve_handle.dae
manipulation_playground_articulated_devices/devices/ball_valve/controllers/: ball_valve_controllers.yaml
manipulation_playground_articulated_devices/devices/button/launch/: spawn_button.launch
manipulation_playground_articulated_devices/launch/: display_model.launch
manipulation_playground_articulated_devices/resources/: display_model.rviz
manipulation_playground_components/: CMakeLists.txt  README.md  package.xml
manipulation_playground_components/affordances/generic_valve/: VALVE.mtl
manipulation_playground_components/affordances/needle_valve/: Needle_Valve.mtl
manipulation_playground_device_dynamics_toggler/: CMakeLists.txt  README.md  package.xml
manipulation_playground_device_dynamics_toggler/scripts/: device_dynamics_toggler.py
manipulation_playground_device_dynamics_toggler/srv/: toggleDeviceDynamics.srv
(+67 files in other folders)
