<package>
  <name>manipulation_playground_articulated_devices</name>
  <version>0.1.0</version>
  <description>manipulation_playground_articulated_devices</description>
  <maintainer email="jacques@robots.ox.ac.uk">Jacques Cloete</maintainer>

  <license>BSD</license>

  <url type="website">https://ori.ox.ac.uk/</url> 
  
  <author email="jacques@robots.ox.ac.uk">Jacques Cloete</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>xacro</run_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>


  <export>
  </export>
</package>
