<?xml version="1.0"?>
<package format="2">
  <name>manipulation_playground_components</name>
  <version>0.0.0</version>
  <description>Repository to contain assets related to affordances in the manipulation playground, e.g., meshes, fiducial descriptions, etc.</description>

  <maintainer email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</maintainer>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
